# slotsfx

./: .gitignore  Cargo.toml  README.md  behaviour.txt  build.ps1  build.rs  nam.fig  notes.txt  spectrum_thief.txt
assets/models/: Diezel CH 2 Crunch 3.nam  Diezel CH 4 Rhythm 3.nam  Diezel CH 4 Rhythm TS808 1.nam  Diezel CH 4 Rhythm TS808 2.nam  placeholder.nam
examples/: test-shifter.rs
scratch/: test_nam.rs
src/: egui_fresh.rs  lib.rs  main.rs  registry.rs  ui.rs  ui_egui.rs  ui_webview.rs
src/dsp/: autotune.rs  bitcrusher.rs  cab.rs  deconvolve.rs  delay.rs  eq.rs  gate.rs  mod.rs  nam.rs  overdrive.rs  pitch_detector.rs  pitch_shifter.rs  reverb.rs  tuner.rs
ui_web/: index.html  package-lock.json  package.json  vite.config.js
ui_web/src/: actions.js  callbacks.js  data.js  dom-updates.js  ipc.js  main.js  render-inspector.js  render-macros.js  render-rack.js  render-snapshots.js  state.js  style.css  utils.js
